- add satoshi font family and add landing section to home page - edit next config to enable svg import

--- a/apps/web/locales/en.json
+++ b/apps/web/locales/en.json
@@ -6,6 +6,7 @@
   "languages": "Languages",
   "en": "English",
   "fr": "French",
+  "orders": "Orders",
   "app_description": "Discover Quality. Shop with Confidence.",
   "navigation": {
     "shop": "Shop",
