--- a/apps/web/locales/fr.json
+++ b/apps/web/locales/fr.json
@@ -6,6 +6,7 @@
   "languages": "Langues",
   "en": "Anglais",
   "fr": "Français",
+  "orders": "Commandes",
   "app_description": "Découvrez la qualité. Faites vos achats en toute confiance.",
   "navigation": {
     "shop": "Boutique",
