- persist products filters parameters using nuqs - create a trpc query to get categories - improve products end-point to apply filters

--- a/apps/web/locales/en.json
+++ b/apps/web/locales/en.json
@@ -8,6 +8,10 @@
   "fr": "French",
   "orders": "Orders",
   "app_description": "Discover Quality. Shop with Confidence.",
+  "common": {
+    "home": "Home",
+    "products": "Products"
+  },
   "navigation": {
     "shop": "Shop",
     "new_arrivals": "New Arrivals",
